--- a/themes/Paradise Smoked Glass.css
+++ b/themes/Paradise Smoked Glass.css
@@ -211,7 +211,8 @@ body {
 /* Section Borders */
 
 .monaco-workbench .part.sidebar > .content > div,
-.monaco-workbench .part.sidebar {
+.monaco-workbench .part.sidebar,
+.monaco-workbench .part.sidebar .monaco-list-row {
     width: calc(100% - var(--border)) !important;
 }
 
